# weather2alert

./: .gitignore  LICENSE  MANIFEST.in  README.md  mathematical_model.md  model.md  pyproject.toml  requirements.txt  requirements.yaml  setup.py
.github/workflows/: test.yml
_deprecated/: env.py  heatalerts2.py  merge_hospitalizations.py  setup.py
_deprecated/training/data_processing/: download_heat_metrics.py
broach/: callbacks.py  datautils.py
data/: .gitignore
data-processing/: README.md  Snakefile  confounders.py  heatalerts.py  heatmetrics.py  hospitalizations.py  merge.py  merge_state_actions.py  requirements.yaml
data-processing/conf/: config.yaml  snakemake.yaml
data/processed/: bspline_basis.parquet  budget.parquet  confounders.parquet  endogenous_states_actions.parquet
data/processed/alerts/: AL.parquet  (+49 more)
data/raw/: DoE_climate_zones.csv  state2fips.csv  zone-county-crosswalk.dbx
model-training/: Snakefile  models.py  train.py
model-training/conf/: config.yaml
reward-training/: README.md  hospitalizations.py  models.py  modules.py  requirements.yaml  train.py
reward-training/conf/: config.yaml
src/weather2alert/: datautils.py  env.py
tests/: test_setup.py
training/: models.py  train.py  validation.py
training/conf/: config.yaml
weather2alert/: __init__.py  datautils.py  env.py
weights/: master.yaml
weights/linear/: config.yaml
weights/linear_full_medicare/: config.yaml
weights/nn_debug_medicare/: config.yaml  posterior_samples.pt
weights/nn_full_medicare/: config.yaml
weights/nn_full_medicare_all/: config.yaml
(+16 files in other folders)
