[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather2alert"
version = "0.1.0"
description = "A gym environment for optimizing heat alert issuance during heatwaves"
readme = "README.md"
authors = [{ name="Anonymous", email="actual.marmots.0d@icloud.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "scipy",
    "tqdm",
    "pyarrow",
    "pandas",
    "torch",
    "gymnasium",
]

# Optional dependencies go here under 'optional-dependencies'
[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["weather2alert"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
weather2alert = []